# t5s3-epaper

./: .env.example  .gitignore  Cargo.toml  README.md  TODO.md  justfile
.cargo/: config.toml
crates/epub-reader/: Cargo.toml
crates/epub-reader/.cargo/: config.toml
crates/epub-reader/src/: document.rs  error.rs  image.rs  lib.rs  markdown.rs  txt.rs
crates/epub-reader/src/epub/: container.rs  mod.rs  opf.rs  toc.rs  xhtml.rs  zip.rs
crates/epub-reader/tests/: epub.rs  image.rs  parse.rs
crates/epub-reader/tests/fixtures/: cover-meta.epub  cover-properties.epub  minimal.epub  toc-nav.epub  toc-ncx.epub
crates/t3s3-epaper/: Cargo.toml  README.md
crates/t3s3-epaper/examples/: ble.rs  display.rs  rx.rs  tx.rs  wifi_lora_bridge.rs
crates/t3s3-epaper/src/: board.rs  lib.rs
crates/t3s3-epaper/src/ssd1680/: command.rs  error.rs  lut.rs  mod.rs
crates/t3s3-epaper/src/sx1262/: command.rs  error.rs  mod.rs  params.rs
crates/t5s3-epaper-core/: Cargo.toml  README.md
crates/t5s3-epaper-core/examples/: battery.rs  clock.rs  counter.rs  deepsleep.rs  frontlight.rs  gps.rs  grayscale.rs  hello-world.rs  input.rs  lora.rs  lora_recv.rs  lora_send.rs  rotation.rs  rtc-clock.rs  screen-repair.rs  sdcard.rs  simple.rs  temperature.rs  touchscreen.rs
crates/t5s3-epaper-core/src/: battery.rs  display.rs  ed047tc1.rs  frontlight.rs  gps.rs  graphics.rs  input.rs  lib.rs  lora.rs  rmt.rs  sdcard.rs  touchscreen.rs
crates/t5s3-epaper-ui/: Cargo.toml  README.md
crates/t5s3-epaper-ui/src/: datetime.rs  fmt.rs  layout.rs  main.rs  screen.rs  settings.rs  widgets.rs  wifi.rs
crates/t5s3-epaper-ui/src/pages/: frontlight.rs  gps.rs  home.rs  info.rs  library.rs  lora.rs  mod.rs  music.rs  reader.rs  settings.rs  sleep.rs
examples/: battery.rs  ble.rs  clock.rs  counter.rs  deepsleep.rs  frontlight.rs  gps.rs  grayscale.rs  hello-world.rs  input.rs  lora.rs  lora_recv.rs  lora_send.rs  rotation.rs  rtc-clock.rs  screen-repair.rs  sdcard.rs  simple.rs  temperature.rs  touchscreen.rs  ui.rs
src/: display.rs  ed047tc1.rs  gps.rs  lib.rs  lora.rs  power.rs  rmt.rs  rtc.rs  sdcard.rs
test-files/: sample.epub  sample.md  sample.txt
tools/: ble.py
tools/wallpaper/: Cargo.toml  README.md  convert.sh
tools/wallpaper/.cargo/: config.toml
tools/wallpaper/src/: main.rs
