[workspace]
resolver = "2"
members = ["crates/t5s3-epaper-core", "crates/t5s3-epaper-ui", "crates/t3s3-epaper"]
exclude = ["tools/wallpaper", "crates/epub-reader"]

[workspace.package]
version = "1.1.0"
edition = "2021"
license = "GPL-3.0"
repository = "https://github.com/noot/t5s3-epaper"

[workspace.dependencies]
critical-section = "1.2.0"
nb = "1"
esp-hal = { version = "1.1.1", features = ["esp32s3", "unstable"] }
embedded-graphics-core = "0.4.0"
esp-alloc = "0.10.0"
esp-bootloader-esp-idf = { version = "0.5.0", features = ["esp32s3"] }
esp-storage = { version = "0.9.0", features = ["esp32s3"] }
embedded-storage = "0.3.1"
log = "0.4.28"
embedded-hal = "1.0.0"
embedded-hal-bus = "0.3.0"
embedded-sdmmc = { version = "0.9.0", default-features = false, features = ["log"] }
nmea = { version = "0.7", default-features = false, features = ["GNSS", "other"] }

esp-radio = { version = "1.0.0-beta.0", features = ["esp32s3", "wifi", "log-04"] }
esp-rtos = { version = "0.3.0", features = ["esp32s3", "esp-radio", "embassy", "log-04"] }
embassy-executor = "0.10.0"
embassy-net = { version = "0.9", features = ["dhcpv4", "medium-ethernet", "udp", "dns"] }
embassy-time = "0.5"
embassy-futures = "0.1"
static_cell = "2.1"

esp-println = { version = "0.17.0", features = ["esp32s3", "log-04"] }
esp-backtrace = { version = "0.19.0", features = ["esp32s3", "panic-handler", "println"] }
u8g2-fonts = { version = "0.7.2", features = ["embedded_graphics_textstyle"] }
embedded-graphics = "0.8.1"
tinybmp = "0.6.0"

t5s3-epaper-core = { path = "crates/t5s3-epaper-core" }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false

# esp-hal strongly recommends building dependencies with optimizations even in dev.
[profile.dev.package.esp-hal]
opt-level = 3

# esp-radio's docs require opt-level 2 or 3, otherwise the wifi driver misbehaves;
# the esp-rtos scheduler is timing-sensitive too.
[profile.dev.package.esp-radio]
opt-level = 3

[profile.dev.package.esp-rtos]
opt-level = 3
